<resources>
    <string name="app_name">CollectorsCorner</string>


    <!-- activity_addgenre.xml strings added -->
    <string name="title_add_genre">Add Genre</string>
    <string name="hint_genre_name">Enter genre name</string>
    <string name="hint_genre_goal">Set genre goal</string>
    <string name="btn_add_genre">Add</string>

    <!-- activity_addbook.xml strings added -->
    <string name="title_add_book">Add Book</string>
    <string name="btn_book_image">Take photo</string>
    <string name="hint_book_title">Enter book title</string>
    <string name="hint_book_description">Enter description</string>
    <string name="hint_book_date_acquisition">Date of acquisition</string>
    <string name="btn_select_date">Select</string>
    <string name="btn_add_book">Add</string>

    <!--activity_library.xml strings added-->
    <string name="total_books_collected">Total Books Collected: %d</string>
    <string name="total_genres">Total Genres: %d</string>
    <string name="failed_to_load_books">Failed to load books.</string>
    <string name="failed_to_load_total_books">Failed to load total books collected.</string>
    <string name="failed_to_load_total_genres">Failed to load total genres.</string>

    <!-- added resources for the current genre goal and genres achieved -->
    <string name="current_goal">Current Goal: %1$s</string>
    <string name="genres_achieved">Genres Achieved: %1$d</string>

    <!-- activity_user_achievements.xml strings added -->
    <string name="p_achievement">%d%%</string>
    <string name="complete_achievement">Completed</string>

</resources>