<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".AddBookActivity">


    <TextView
        android:id="@+id/addBookTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_book"
        android:fontFamily="@font/alegreya_sans_sc"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:id = "@+id/bookImageIV"
        android:layout_width="115sp"
        android:layout_height="125sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookTv"
        />


    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_book_image"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/lavender"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addBookTv"
        />

    <EditText
        android:id = "@+id/bookTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType = "text"
        android:hint="@string/hint_book_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookImageIV"
        />

    <EditText
        android:id = "@+id/bookDescriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType = "text"
        android:hint="@string/hint_book_description"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookTitleEt"
        />

    <TextView
        android:id = "@+id/bookDateAcquisitionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book_date_acquisition"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookDescriptionEt"
        />


    <Button
        android:id="@+id/bookDateAcquisitionBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_select_date"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/lavender"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookDescriptionEt"
        />

    <Spinner
        android:id="@+id/bookGenreSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="23dp"
        android:paddingBottom="23dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookDateAcquisitionTv"
        />

    <Button
        android:id="@+id/addBookBtn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/btn_add_book"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookGenreSpinner" />

    <!--Navigation Bar Bottom-->
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <!--Adding genre navigation-->
        <Button
            android:id="@+id/add_genre_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Add Genre"
            android:textColor="@android:color/white" />

        <!--Achievements navigation-->
        <Button
            android:id="@+id/achievements_button"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Genre Goals"
            android:textColor="@android:color/white" />


        <!--Back to library page navigation-->
        <Button
            android:id="@+id/library_btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Library"
            android:textColor="@android:color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>